changed mongoburl to mongolive

--- a/views/auth/partnersignup.ejs
+++ b/views/auth/partnersignup.ejs
@@ -1,3 +1,8 @@
+<div class="container">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-6">
 <div class="container mt-3">
     <h2>New Partner</h2>
   
@@ -40,3 +45,7 @@
         <button type="submit">Welcome to the Party</button>
     </form>
   </div>
+</div>
+<div class="col">
+</div>
+</div>
