--- a/views/auth/userlogin.ejs
+++ b/views/auth/userlogin.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-4">
     <div class="row">
         <div class="col-md-5 mx-auto">
             <form action="/auth/userlogin" method="post">
@@ -16,6 +16,7 @@
                         value=" Log In"
                     />
             </div>
+            <a href="/auth/partnerlogin" class="btn btn-secondary btn-block mt-3">Click Here To Partner LogIn Page </a>
         </form>
         </div>
     </div>
