--- a/views/auth/usersignup.ejs
+++ b/views/auth/usersignup.ejs
@@ -1,4 +1,8 @@
-<h2>User Sign Up</h2>
+<div class="container">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-6">
 
 <div class="container mt-3">
     <h2>New User</h2>
@@ -19,3 +23,7 @@
         <button type="submit">Welcome to the Party</button>
     </form>
   </div>
+</div>
+<div class="col">
+</div>
+</div>
