--- a/views/auth/partnerlogin.ejs
+++ b/views/auth/partnerlogin.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-4">
     <div class="row">
         <div class="col-md-5 mx-auto">
             <form action="/auth/partnerlogin" method="post">
@@ -16,6 +16,7 @@
                         value=" Log In"
                     />
             </div>
+            <a href="/auth/userlogin" class="btn btn-secondary btn-block mt-3">Click Here To User LogIn Page </a>
         </form>
         </div>
     </div>
