--- a/views/partner/show.ejs
+++ b/views/partner/show.ejs
@@ -1,16 +1,11 @@
 <div class="container mt-5">
-    <div class="mb-3">
-      <div class="row">
-        <!-- <div class="col-md-9">
-                <a class="btn btn-danger" href="/new">New Restaurant</a>
-            </div> -->
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-9">
-        <div class="row">
-          <div class="col-md-12 mb-3">
-            <div class="card">
+  <div class="col-12">
+          <div class="card mb-3" style="max-width: 1000px">
+          <div class="row no-gutters">
+              <div class="col-md-4">
+              <img src="<%= partner.img %>" class="card-img" alt="profile picture">
+              </div>
+              <div class="col-md-8">
               <div class="card-body">
                 <div class="d-flex">
                   <h2 class="card-title">
@@ -30,21 +25,22 @@
                     <%= "$" %><%= partner.cost %><%= "/Hour" %>
                 </p>
               </div>
-              <form action="/hire/<%= partner._id %>" method="GET">
+              <form action="/hire/<%= partner._id %>" method="GET" class="ml-3 mb-2">
                 <button type="submit" class="btn btn-info">Hire!</button>
               </form>
-              <hr>
-              <h2 class="card-title">
-                <%= partner.ign %>
-              </h2>
-              <ul class="list-group mt-3">
-                <% partner.hiringHistory.forEach(hiring => { %>
-                <li class="list-group-item">
-                  <%= hiring %>
-                </li>
-                <% }) %>
             </div>
           </div>
         </div>
       </div>
+      <hr>
+      <h3 class="card-title ml-3">
+        Hiring History
+      </h3>
+      <ul class="list-group mt-3">
+        <% partner.hiringHistory.forEach(hiring => { %>
+        <li class="list-group-item">
+          <%= hiring %>
+        </li>
+        <% }) %>
       </div>
+      
