--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,6 +60,12 @@
               </li>
               <% } %>
             </ul>
+            <nav class="navbar navbar-light bg-light mr-auto">
+                <form action="/search" method="GET" class="form-inline"> 
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="searchBar">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </nav>
             <ul class="nav justify-content-end">
               <% if(!currentUser || currentUser.isUser){%>
               <li class="nav-item">
