--- a/views/partner/show.ejs
+++ b/views/partner/show.ejs
@@ -77,7 +77,7 @@
           </ul>
           <form action="/testimonial/<%= partner._id %>" method="GET" class="form-inline"> 
             <input class="form-control mr-sm-5 searchBar" type="search" placeholder="Very Good" aria-label="Search" name="searchBar">
-            <button class="btn btn-outline-success my-1 my-sm-0 searchButton" type="submit">Submit Tesimonial</button>
+            <button class="btn btn-outline-primary my-1 my-sm-0 searchButton" type="submit">Submit Tesimonial</button>
           </form>
           <hr>
           
