--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -51,7 +51,7 @@
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="/">All Games</a>
                   <a class="dropdown-item" href="/game/apexLegend">Apex Legend</a>
-                  <a class="dropdown-item" href="/game/csgo">CSGO</a>
+                  <a class="dropdown-item" href="/game/csgo">CSGO2</a>
                   <a class="dropdown-item" href="/game/dota2">Dota2</a>
                   <a class="dropdown-item" href="/game/minecraft">Minecraft</a>
               </li>
