--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,7 +50,7 @@
                 <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Games</a>
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="/">All Games</a>
-                  <a class="dropdown-item" href="/game/apexLegend">Apex Legend</a>
+                  <a class="dropdown-item" href="/game/apexLegend">Apex Legend1</a>
                   <a class="dropdown-item" href="/game/csgo">CSGO2</a>
                   <a class="dropdown-item" href="/game/dota2">Dota2</a>
                   <a class="dropdown-item" href="/game/minecraft">Minecraft</a>
